[project]
name = "cbwebreader"
version = "1.1.3"
description = "CBR/Z Web Reader"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.7",
    "django-boost>=2.1",
    "django-bootstrap4>=25.1",
    "django-cors-headers>=4.7.0",
    "django-csp>=3.8",
    "django-extensions>=3.2.3",
    "django-filter>=25.1",
    "django-imagekit>=5.0.0",
    "django-permissions-policy>=4.25.0",
    "django-silk>=5.3.2",
    "django-sri>=0.8.0",
    "django-webpack-loader>=3.1.1",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-yasg>=1.21.10",
    "flake8>=7.2.0",
    "flake8-annotations>=3.1.1",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "mysqlclient>=2.2.7",
    "pillow>=11.1.0",
    "psycopg2>=2.9.10",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "rarfile>=4.2",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "ipython>=9.0.2",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "pylint-django>=2.6.1",
    "pyopenssl>=25.0.0",
    "werkzeug>=3.1.3",
]
